# agentic-content-studio

./: .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  TOOLS.md  USER.md  skills-lock.json
.claude/: .settings.json  CLAUDE.md  CODEX.md  launch.json  settings.json
.claude/agents/: researcher.md
.claude/commands/: analytics.md  cleanup.md  cut-edit.md  distribute.md  edit.md  grill-me.md  hide.md  ideate.md  open.md  overlay.md  production-materials.md  publish.md  reverse-engineer.md  review.md  script.md  session-handoff.md  skill-scout.md  suggest.md  thumbnails.md  unhide.md  visuals.md
.claude/scripts/: open_in_antigravity.sh
.playwright-mcp/: page-2026-06-08T09-47-53-861Z.yml  page-2026-06-08T09-48-10-012Z.yml
Downloads/Instagram/: Colton_Dean_DYs5OLfPEcC.info.json  Colton_Dean_DYs5OLfPEcC_caption.txt
Orchestrator/Astra/: Astra.md
Orchestrator/Claudella/: Clodella.md
Orchestrator/Codex/: CODEX.md
Orchestrator/Skills/: schedule_skill.md  strategy_skill.md
Orchestrator/Vera/: Vera.md
Planning/: goals.yaml
Planning/Daily/: 2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json
Planning/prompts/: evening_sync.md  horizon.md  morning_build.md  weekly_review.md
Youtube/Input/5. Tools/4. editing_tools/video-use/: pyproject.toml
Youtube/Input/5. Tools/4. editing_tools/video-use/helpers/: compress_gaps.py  groq_transcribe.py  video_analyst.py
scripts/: skill-scout.md
scripts/warroom/: alert.sh  (+11 more)
warroom-app/: package-lock.json  package.json  push.js  server.js
(+646 files in other folders)
