[project]
name = "video-use"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "librosa",
    "matplotlib",
    "pillow",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
animations = ["manim"]
analysis = [
    "opencv-python-headless>=4.8",
    "pytesseract>=0.3",
    "mediapipe>=0.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
